adding banner to website

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                         <a href="https://instagram.com/thelokinetwork/" class="icons"><img src="images/64-instagram.png" alt="Instagram"></a>
                     </div>
                     <!--This website was created by: Jacob Caccamo-->
-                    <div id="copyright">&copy;Loki Network, All rights reserved.</div>
-                    <div id='permission'>Your image used without permission? Contact jacobcaccamo@theimpulsiveapps.com!</div>
+                    <div id="copyright">&copy;Jacob Caccamo, Samantha Welch, Thomas Colgrove, Mike Yeung, All rights reserved.</div>
                 </footer>        
     </body>
 </html>
