--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <!-- Footer -->
         <footer id="footer">
             <div id="social_links">
-                <a href="https://twitter.com/TheLokiNetwork" class="icons"><img src="Website_Assets/64-twitter.png" alt="Twitter"></a>
-                <a href="https://www.facebook.com/TheLokiNetwork" class="icons"><img src="Website_Assets/64-facebook.png" alt="Facebook"></a>
-                <a href="https://instagram.com/thelokinetwork/" class="icons"><img src="Website_Assets/64-instagram.png" alt="Instagram"></a>
+                <a href="https://twitter.com" class="icons"><img src="Website_Assets/64-twitter.png" alt="Twitter"></a>
+                <a href="https://www.facebook.com/" class="icons"><img src="Website_Assets/64-facebook.png" alt="Facebook"></a>
+                <a href="https://instagram.com/" class="icons"><img src="Website_Assets/64-instagram.png" alt="Instagram"></a>
             </div>
             <!--This website was created by: Jacob Caccamo-->
             <div id="copyright">&copy;Jacob Caccamo, Samantha Welch, Thomas Colgrove, Mike Yeung, All rights reserved.</div>
