updating the banner

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     </head>
     <body>
         <!--Header-->
-        <div id='header'><!--<img id='logo' src="Assets/Loki_Logo.png"><img src='Assets/Loki_Text.png' id='logo_text'><a id='apple_badge' href=''><img src='images/Download_on_the_App_Store_Badge_US-UK_135x40.svg'></a>--></div>
+        <div id='header'><img src="Website_Assets/header_text.png" id='logo_text'><a id='apple_badge' href=''><img src='Website_Assets/Download_on_the_App_Store_Badge_US-UK_135x40.svg'></a></div>
         
         <!-- Banner -->
         <section id="banner">
             <div id='overlay1'>
                 <div id='banner_text'>
-                    <h1>Portzle</h1>
-                    <h6>The easiest way to share what you're doing and where you're doing it,<br>coming to the App Store - Fall 2015</h6>
+                    <h1 style="font-size: 130px">Portzle</h1>
+                    <h6>Navigate and warp your way to success<br>coming to the App Store - Winter 2015</h6>
                 </div>
                 <div class="goto-next" id='section_one'></div>
             </div>
