--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
         <title>Portzle</title>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
         <meta charset="utf-8" />
-        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
         <link rel="stylesheet" href="style.css"/>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <!--<link rel="icon" type="image/png" sizes="96x96" href="Assets/favicon-96x96.png">-->
-        <!--<script type="text/javascript" src="loki_script.js"></script>-->
+        <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
         <!--Header-->
@@ -20,9 +19,21 @@
             <div id='overlay1'>
                 <div id='banner_text'>
                     <h1 style="font-size: 130px">Portzle</h1>
-                    <h6>Navigate and warp your way to success<br>coming to the App Store - Winter 2015</h6>
+                    <h6>Navigate and warp your way to success,<br>coming to the App Store - Winter 2015</h6>
                 </div>
                 <div class="goto-next" id='section_one'></div>
+            </div>
+        </section>
+        <section id='section_one'>
+            <div id='creators'>
+                <div id='jake'>
+                    <div class='profile_picture'>
+                        <img class='picture_size' src="Website_Assets/Jacob_Caccamo.png" alt='Jacob Caccamo'>
+                    </div>
+                </div>
+                <div id='thomas'></div>
+                <div id='sam'></div>
+                <div id='mike'></div>
             </div>
         </section>
 
