adding changed metadata and an asset

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="goto-next-black" id='section_two'></div>
         </section>
         <section id='two'>
-            <div id='overlay2'>
+            <div class='overlay2'>
                 <div id='creators'>
                     <div id='jake'>
                         <div class='profile_picture'>
@@ -72,6 +72,20 @@
                             <p></p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section id='three'>
+            <div class='overlay2'>
+                <div id='references_wrapper'>
+                    <h1 style="font-size: 75px; margin: 0px;">References</h1>
+                    <h2>We would like to thank the following sources for making Portzle a reality!</h2>
+                    <ul style='margin: 0 auto;'>
+                        <li>Marble Background: http://wallarthd.com/imagepics/beautiful-clear-marble-on-the-wood-wallpaper-high-resolution.html/beautiful-clear-marble-on-the-wood-wallpaper-high-resolution</li>
+                        <li>Bio Background: http://wallarthd.com/imagepics/best-clear-marble-wallpaper-background.html</li>
+                        <li>Instructions Background: http://images4.alphacoders.com/106/106704.jpg</li>
+                        <li>References Background: http://wallpaperdj.com/view-warp_drive-1920x1200.html</li>
+                    </ul>
                 </div>
             </div>
         </section>
