adding an overview

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         </section>
         <section id='one'>
            <div id='wrapper'>
+              <div id='overview'>
+                  
+              </div>
                <div id='instructions_text'>
                    <h1 style='font-size: 60px; margin: 0px'>Instructions</h1>
                    <p style='font-size: 25px;'>Goal: Navigate the marble to survive as long as possible.<br><br>Avoid rocks, walls, and ledges and utilize portals to switch between worlds.<br><br>Control the marble by tiliting your device or by swiping your finger along the bottom of the screen.<br><br>Good Luck...</p>
@@ -42,7 +45,7 @@
                         </div>
                         <div class='name_bio'>
                             <h1>Jacob Caccamo</h1>
-                            <p>Jake is a junior pursuing a degree in Engineering Psychology with a minor in Computer Science at Tufts University.</p>
+                            <p>Jake is a junior pursuing a degree in Engineering Psychology with a minor in Computer Science at Tufts University. He has a passion for skating, surfing, and playing soccer. (Total douche bag) Jake has loved video games from a young age and hopes to pursure game development professionally.</p>
                         </div>
                     </div>
                     <div id='thomas'>
@@ -80,16 +83,18 @@
                 <div id='references_wrapper'>
                     <h1 style="font-size: 75px; margin: 0px;">References</h1>
                     <h2>We would like to thank the following sources for making Portzle a reality!</h2>
-                    <ul style='margin: 0 auto;'>
-                        <li>Marble Background: http://wallarthd.com/imagepics/beautiful-clear-marble-on-the-wood-wallpaper-high-resolution.html/beautiful-clear-marble-on-the-wood-wallpaper-high-resolution</li>
-                        <li>Bio Background: http://wallarthd.com/imagepics/best-clear-marble-wallpaper-background.html</li>
-                        <li>Instructions Background: http://images4.alphacoders.com/106/106704.jpg</li>
-                        <li>References Background: http://wallpaperdj.com/view-warp_drive-1920x1200.html</li>
-                    </ul>
+                    <div id='references_list'>
+                        <ul>
+                            <li>Marble Background: http://wallarthd.com/imagepics/beautiful-clear-marble-on-the-wood-wallpaper-high-resolution.html/beautiful-clear-marble-on-the-wood-wallpaper-high-resolution</li>
+                            <li>Bio Background: http://wallarthd.com/imagepics/best-clear-marble-wallpaper-background.html</li>
+                            <li>Instructions Background: http://images4.alphacoders.com/106/106704.jpg</li>
+                            <li>References Background: http://wallpaperdj.com/view-warp_drive-1920x1200.html</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
-
+       
         <!-- Footer -->
         <footer id="footer">
             <div id="social_links">
