updating instructions and overview

--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
             <div class="goto-next" id='section_one'></div>
         </section>
         <section id='one'>
-           <div id='wrapper'>
-              <div id='overview'>
-                  
-              </div>
-               <div id='instructions_text'>
-                   <h1 style='font-size: 60px; margin: 0px'>Instructions</h1>
-                   <p style='font-size: 25px;'>Goal: Navigate the marble to survive as long as possible.<br><br>Avoid rocks, walls, and ledges and utilize portals to switch between worlds.<br><br>Control the marble by tiliting your device or by swiping your finger along the bottom of the screen.<br><br>Good Luck...</p>
+            <div id='wrapper'>
+                <div id='overview'>
+                    <h1 style='font-size: 60px; margin-top: 150px'>Game Summary</h1>
+                    <p style='font-size: 25px;'>Portzle is a "infinite roller" in which the player attempts to navigate a slew of obstacles by switching between two worlds via portals. The portals are mirrored in both environments, however, the osbstacles are different, allowing players to strategically chart their own course through the levels.</p>
+                </div>
+                <div id='instructions_text'>
+                   <h1 style='font-size: 60px; margin-top: 150px'>Instructions</h1>
+                   <p style='font-size: 25px;'>Goal: Navigate the marble to survive as long as possible. Avoid rocks, walls, and ledges and utilize portals to switch between worlds. Control the marble by tiliting your device or by swiping your finger along the bottom of the screen.<br><br>Good Luck...</p>
                </div>
-           </div>
+            </div>
             <div class="goto-next-black" id='section_two'></div>
         </section>
         <section id='two'>
@@ -54,7 +55,7 @@
                         </div>
                         <div class='name_bio'>
                             <h1>Thomas Colgrove</h1>
-                            <p></p>
+                            <p>Thomas is a software developer with a passion for </p>
                         </div>
                     </div>
                     <div id='sam'>
