--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css"/>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-        <!--<link rel="icon" type="image/png" sizes="96x96" href="Assets/favicon-96x96.png">-->
+        <link rel="icon" type="image/png" sizes="96x96" href="Website_Assets/favicon-96x96.png">
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body onload='load()'>
