adding new button

--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
             <div id='overlay1'>
                 <div id='banner_text'>
                     <h1 style="font-size: 120px">Portzle</h1>
-                    <h6>Navigate and warp your way to success,<br>coming to the App Store - Winter 2015</h6>
+                    <h6>Navigate and warp your way to success.</h6>
                 </div>
+                <a id='github_link' href='https://github.com/Jaroca124/portzle'>
+                    <div id='githublink_button'>
+                        <h1 id='button_text'>View on Github</h1>
+                    </div>
+                </a>
             </div>
         </section>
         
