cleaning up the website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body onload='load()'>
         <!--Header-->
-        <div id='header'><img src="Website_Assets/header_text.png" id='logo_text'><a id='apple_badge' href=''><img src='Website_Assets/Download_on_the_App_Store_Badge_US-UK_135x40.svg'></a></div>
+        <div id='header'><img src="Website_Assets/header_text.png" id='logo_text'><!--<a id='apple_badge' href=''><img src='Website_Assets/Download_on_the_App_Store_Badge_US-UK_135x40.svg'></a>--></div>
         
         <!-- Banner -->
         <section id="banner">
@@ -96,6 +96,7 @@
                             <li>Bio Background: http://wallarthd.com/imagepics/best-clear-marble-wallpaper-background.html</li>
                             <li>Instructions Background: http://images4.alphacoders.com/106/106704.jpg</li>
                             <li>References Background: http://wallpaperdj.com/view-warp_drive-1920x1200.html</li>
+                            <li>Portal Asset:                             https://www.google.com/searchq=portal&espv=2&biw=1600&bih=775&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiWv9KujtXJAhXEGh4KHW0OA8gQ_AUIBigB#imgrc=hg3kwNOm_a9NxM%3A</li>
                         </ul>
                     </div>
                 </div>
@@ -104,13 +105,15 @@
        
         <!-- Footer -->
         <footer id="footer">
+            <!--
             <div id="social_links">
                 <a href="https://twitter.com" class="icons"><img src="Website_Assets/64-twitter.png" alt="Twitter"></a>
                 <a href="https://www.facebook.com/" class="icons"><img src="Website_Assets/64-facebook.png" alt="Facebook"></a>
                 <a href="https://instagram.com/" class="icons"><img src="Website_Assets/64-instagram.png" alt="Instagram"></a>
             </div>
+            -->
             <!--This website was created by: Jacob Caccamo-->
-            <div id="copyright">&copy;Jacob Caccamo, Samantha Welch, Thomas Colgrove, Mike Yeung, All rights reserved.</div>
+            <div id="copyright">Created by: Jacob Caccamo, Samantha Welch, Thomas Colgrove, Mike Yeung</div>
         </footer>        
     </body>
 </html>
