adding Mike's description

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </div>
                         <div class='name_bio'>
                             <h1>Mike Yeung</h1>
-                            <p></p>
+                            <p>Mike Yeung is apparently a human being and a computer science student at Tufts. He is interested in how developments in software affect the world we live in, like their implications on free speech, privacy, politics, and our jobs being taken over by robots.<br><br></p>
                         </div>
                     </div>
                 </div>
