fixing css error and adding in new page

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
                </div>
             </div>
         </section>
+    
+        <section id='four'>
+            <div id='screenshot'>
+                <img id='picsize_screenshot' src='Website_Assets/screenshot.png' alt="Gameplay Screenshot">
+            </div>
+        </section>
         
         <section id='two'>
             <div class='overlay2'>
@@ -69,7 +75,7 @@
                         </div>
                         <div class='name_bio'>
                             <h1>Samantha Welch</h1>
-                            <p></p>
+                            <p>Samantha is a junior studying computer science at Tufts University.</p>
                         </div>
                     </div>
                     <div id='mike'>
@@ -91,7 +97,7 @@
                     <h1 style="font-size: 75px; margin: 0px;">References</h1>
                     <h2>We would like to thank the following sources for making Portzle a reality!</h2>
                     <div id='references_list'>
-                        <ul>
+                        <ul style="overflow: hidden;">
                             <li>Marble Background: http://wallarthd.com/imagepics/beautiful-clear-marble-on-the-wood-wallpaper-high-resolution.html/beautiful-clear-marble-on-the-wood-wallpaper-high-resolution</li>
                             <li>Bio Background: http://wallarthd.com/imagepics/best-clear-marble-wallpaper-background.html</li>
                             <li>Instructions Background: http://images4.alphacoders.com/106/106704.jpg</li>
