--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                             <li>Instructions Background: http://images4.alphacoders.com/106/106704.jpg</li>
                             <li>References Background: http://wallpaperdj.com/view-warp_drive-1920x1200.html</li>
                             <li>Portal Asset:                             https://www.google.com/searchq=portal&espv=2&biw=1600&bih=775&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiWv9KujtXJAhXEGh4KHW0OA8gQ_AUIBigB#imgrc=hg3kwNOm_a9NxM%3A</li>
+                            <li>Scoring Tutorial: http://answers.unity3d.com/questions/8572/how-to-increase-score-incrementally-over-time.html</li>
                         </ul>
                     </div>
                 </div>
