--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </div>
                         <div class='name_bio'>
                             <h1>Samantha Welch</h1>
-                            <p>Samantha is a junior studying computer science at Tufts University.</p>
+                            <p>Samantha is a junior studying Computer Science at Tufts University. She enjoys hanging out with friends and listening to a wide variety of music. She plays games casually.</p>
                         </div>
                     </div>
                     <div id='mike'>
@@ -84,7 +84,7 @@
                         </div>
                         <div class='name_bio'>
                             <h1>Mike Yeung</h1>
-                            <p>Mike Yeung is apparently a human being and a computer science student at Tufts. He is interested in how developments in software affect the world we live in, like their implications on free speech, privacy, politics, and our jobs being taken over by robots.<br><br></p>
+                            <p>Mike Yeung is apparently a human being and a Computer Science student at Tufts. He is interested in how developments in software affect the world we live in, like their implications on free speech, privacy, politics, and our jobs being taken over by robots.<br><br></p>
                         </div>
                     </div>
                 </div>
@@ -104,6 +104,17 @@
                             <li>References Background: http://wallpaperdj.com/view-warp_drive-1920x1200.html</li>
                             <li>Portal Asset:                             https://www.google.com/searchq=portal&espv=2&biw=1600&bih=775&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiWv9KujtXJAhXEGh4KHW0OA8gQ_AUIBigB#imgrc=hg3kwNOm_a9NxM%3A</li>
                             <li>Scoring Tutorial: http://answers.unity3d.com/questions/8572/how-to-increase-score-incrementally-over-time.html</li>
+                            <li>Unity Store Assets:
+                            <li>Cactus Pack by Sandro Tatinashvili</li>
+                            <li>Free Christmas Assets by Brainbox</li>
+                            <li>Free Christmas presents by Brainbox</li>
+                            <li>Coin Dollarbag and Gold by David Villa</li>
+                            <li>Cope! Free Skybox Pack by 70:30</li>
+                            <li>Fantasy Skybox Free by G.E.TeamDev</li>
+                            <li>Rocks and Boulders 2 by Manufactura K4</li>
+                            <li>Yughes Free Sand Materials by Yughues</li>
+                            <li>Free Seamless Textures - UV Motion</li>
+                            <li>free hats for uma - sliced studio</li>
                         </ul>
                     </div>
                 </div>
