--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                             <li>Yughes Free Sand Materials by Yughues</li>
                             <li>Free Seamless Textures - UV Motion</li>
                             <li>free hats for uma - sliced studio</li>
+                            <li>Generally, we'd like to thank online Unity tutorials and forums for aiding us in this project.</li>
                         </ul>
                     </div>
                 </div>
