updating sam bio, making a link for the source code

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
                 </div>
                 <a id='github_link' href='https://github.com/Jaroca124/portzle'>
                     <div id='githublink_button'>
-                        <h1 id='button_text'>View on Github</h1>
+                        <h1 class='button_text'>View on Github</h1>
+                    </div>
+                </a>
+                <a id='download_link' href='https://github.com/Jaroca124/portzle'>
+                    <div id='download_button'>
+                        <h1 class='button_text'>Download the Code</h1>
                     </div>
                 </a>
             </div>
@@ -57,7 +62,7 @@
                         </div>
                         <div class='name_bio'>
                             <h1>Jacob Caccamo</h1>
-                            <p>Jake is a junior pursuing a degree in Engineering Psychology with a minor in Computer Science at Tufts University. He has a passion for skating, surfing, and playing soccer. Jake has loved video games from a young age and hopes to pursure game development professionally.</p>
+                            <p>Jake is a Junior pursuing a degree in Engineering Psychology with a minor in Computer Science at Tufts University. He has a passion for skating, surfing, and playing soccer. Jake has loved video games from a young age and hopes to pursure game development professionally.</p>
                         </div>
                     </div>
                     <div id='thomas'>
@@ -75,7 +80,7 @@
                         </div>
                         <div class='name_bio'>
                             <h1>Samantha Welch</h1>
-                            <p>Samantha is a junior studying Computer Science at Tufts University. She enjoys hanging out with friends and listening to a wide variety of music. She plays games casually.</p>
+                            <p>Samantha Welch is a Junior at Tufts University. She is studying Computer Science in the School of Engineering. In her spare time, she enjoys playing hockey, skiing, and building sets for theater. She is passionate about Computer Science and is considering a career in game development.</p>
                         </div>
                     </div>
                     <div id='mike'>
