--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                             <li>Free Seamless Textures - UV Motion</li>
                             <li>free hats for uma - sliced studio</li>
                             <li>All sounds were created by Thomas Colgrove or were sampled from freesound.org</li>
+                            <li>"Rollin" by Limp Bizkit</li>
                             <li>Generally, we'd like to thank online Unity tutorials and forums for aiding us in this project.</li>
                         </ul>
                     </div>
