Changed link for zip

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <h1 class='button_text'>View on Github</h1>
                     </div>
                 </a>
-                <a id='download_link' href='https://github.com/Jaroca124/portzle'>
+                <a id='download_link' href='https://github.com/Jaroca124/portzle/archive/master.zip'>
                     <div id='download_button'>
                         <h1 class='button_text'>Download the Code</h1>
                     </div>
