--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <div id='wrapper'>
                 <div id='overview'>
                     <h1 class='description'>Game Summary</h1>
-                    <p style='font-size: 25px;'>Portzle is a "infinite roller" in which the player attempts to navigate a slew of obstacles by switching between two worlds via portals. The portals are mirrored in both environments, however, the osbstacles are different, allowing players to strategically chart their own course through the levels.</p>
+                    <p style='font-size: 25px;'>Portzle is an "infinite roller" in which the player attempts to navigate a slew of obstacles by switching between two worlds via portals. The portals are mirrored in both environments, however, the obstacles are different, allowing players to strategically chart their own course through the levels.</p>
                 </div>
                 <div id='instructions_text'>
                    <h1 class='description'>Instructions</h1>
-                   <p style='font-size: 25px; margin: 0px'>Goal: Navigate the marble to survive as long as possible. Avoid rocks, walls, and ledges and utilize portals to switch between worlds. Control the marble by tiliting your device or by swiping your finger along the bottom of the screen.<br><br>Good Luck...</p>
+                   <p style='font-size: 25px; margin: 0px'>Goal: Navigate the marble to survive as long as possible. Avoid rocks, walls, and ledges and utilize portals to switch between worlds. Control the marble by tilting your device or by swiping your finger along the bottom of the screen.<br><br>Good Luck...</p>
                </div>
             </div>
         </section>
@@ -62,7 +62,7 @@
                         </div>
                         <div class='name_bio'>
                             <h1>Jacob Caccamo</h1>
-                            <p>Jake is a Junior pursuing a degree in Engineering Psychology with a minor in Computer Science at Tufts University. He has a passion for skating, surfing, and playing soccer. Jake has loved video games from a young age and hopes to pursure game development professionally.</p>
+                            <p>Jake is a Junior pursuing a degree in Engineering Psychology with a minor in Computer Science at Tufts University. He has a passion for skating, surfing, and playing soccer. Jake has loved video games from a young age and hopes to pursue game development professionally.</p>
                         </div>
                     </div>
                     <div id='thomas'>
